Apps hang on launch on Xorg
Affected version
Fedora 37 Beta
gnome-shell-43~rc-2.fc37
Only happens in Xorg, Wayland seems to act as expected.
Bug summary
Launching applications causes long hangs not present in 42. For instance, opening the quick settings and opening the full settings app. At first I thought it only happened with GNOME apps as it seems more frequent with them, but then the same happened with Firefox. Hangs can be extremely long, freezing the desktop except the cursor for up to a minute or so. After an app that hanged is opened and then closed, reopening it will work as expected.
Apologies for not having more specific information, but I can't find anything else I'm doing which could cause it.
Steps to reproduce
- Start GNOME 43 Xorg session.
- Open apps.
Edited by .